fix: change swagger security definitions
